# MxUserbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mxuserbot.service  pyproject.toml
docs/: dev.md  module-development.md  security.md  utils-reference.md
docs/module-development/: README.md
docs/module-development/ConfigValue/: README.md
docs/module-development/fsm/: README.md
docs/module-development/on/: README.md
docs/module-development/watcher/: README.md
src/database/: __init__.py  methods.py
src/mxuserbot/: __init__.py  __main__.py
src/mxuserbot/core/: __init__.py  callback.py  exceptions.py  langs.py  loader.py  log.py  module.py  security.py  types.py  utils.py
src/mxuserbot/core/loader/: __init__.py  constants.py  decorators.py  loader.py  repo.py  utils.py
src/mxuserbot/core/utils/: __init__.py
src/mxuserbot/core/web/: index.html  panel.html
src/mxuserbot/langpacks/: de.yaml  en.yaml  fr.yaml  jp.yaml  ru.yaml  ua.yaml
src/mxuserbot/modules/: help.py  loader.py  ping.py  restart.py  set_prefix.py  shell.py  start.py  sudo.py  verif.py
src/mxuserbot/modules/community/: astolfo.py  msc.py  stickers.py  tgbridge.py  tiktok.py
src/mxuserbot/modules/core/: help.py  loader.py  ping.py  set_prefix.py  shell.py  sudo.py  unlmd.py  verif.py
src/settings/: main.py
src/userbot/: __init__.py  __main__.py  bot.py  registry.py
src/userbot/core/: bot.py  loader.py  methods.py  types.py
src/userbot/modules/: catgirl.py  hello.py  help.py  reloader.py  set_prefix.py  voice_msg.py
(+61 files in other folders)
